--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "colors": "^1.0.3",
         "commander": "^2.8.0",
         "express": "^4.10.1",
+        "cors": "2.8.3",
         "faker": "3.0.1",
         "find-remove": "^0.2.5",
         "fs-extra": "^0.13.*",
